update view index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="vw-100 vh-100 d-flex justify-content-center align-items-center">
+    <div class="vw-100 d-flex justify-content-center align-items-center min-vh-100">
         <div class="col-lg-4 bg-secondary p-5 rounded-2 text-white h-50">
             <h1 class="text-center fw-bold mb-3">Monitoring</h1>
 
