--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
         <h1 class="text-center mb-5">Ukur Kadar Gula Darah</h1>
 
         <div class="list-group col-lg-5 mx-auto">
-            <a href="" type="button" class="btn btn-primary mb-3">
+            <a href="./kadar-gula-darah.html" type="button" class="btn btn-primary mb-3">
                 Ukur Kadar Gula Darah
             </a>
             <a href="" type="button" class="btn btn-success">
